Change Page.css to stop horizontal scrolling

--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,7 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
-
+  overflow: hidden;
   min-height: 100vh;
 }
 
